bugfix: item overlap, props doesnt change when input changes

--- a/editor-components/stats/stats5/stats5.module.scss
+++ b/editor-components/stats/stats5/stats5.module.scss
@@ -8,14 +8,12 @@
     margin: 0 auto;
 
     .bottom-child {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
+      display: grid;
       padding: 0 20px;
+      gap: 30px;
 
       .card {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -35,6 +33,12 @@
           }
         }
 
+        .card-data-title {
+          font-size: 13rem;
+          color: rgba(var(--composer-font-color-primary-rgb), 0.05);
+          margin: 0;
+        }
+
         .card-data-description {
           font-size: 2rem;
           color: var(--composer-font-color-primary);
@@ -44,12 +48,6 @@
           top: 50%;
           transform: translate(-50%, -50%);
           font-weight: bolder;
-        }
-
-        .card-data-title {
-          font-size: 13rem;
-          color: rgba(var(--composer-font-color-primary-rgb), 0.05);
-          margin: 0;
         }
       }
     }
